--- a/src/components/Info/Info.css
+++ b/src/components/Info/Info.css
@@ -2,6 +2,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 
@@ -20,6 +21,14 @@
 }
 
 .twitch {
+  background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 0.31)),
+      to(rgba(0, 0, 0, 0.31))
+    ),
+    url(../../image/twitch.jpg) no-repeat center center/cover;
   background: linear-gradient(rgba(0, 0, 0, 0.31), rgba(0, 0, 0, 0.31)),
     url(../../image/twitch.jpg) no-repeat center center/cover;
   border-radius: 20px;
@@ -28,6 +37,14 @@
 }
 
 .eanews {
+  background: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 0.31)),
+      to(rgba(0, 0, 0, 0.31))
+    ),
+    url(../../image/news.jpg) no-repeat center center/cover;
   background: linear-gradient(rgba(0, 0, 0, 0.31), rgba(0, 0, 0, 0.31)),
     url(../../image/news.jpg) no-repeat center center/cover;
   border-radius: 20px;
