--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,6 @@
 #header {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url(../../image/hero.jpg) no-repeat center center/cover;
-  border-radius: 20px;
   width: 100%;
   height: 100vh;
 }
@@ -12,7 +11,8 @@
   top: 50%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   font-weight: 300;
   letter-spacing: 4px;
+  text-align: center;
 }
