--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -3,14 +3,14 @@
 }
 
 .search-container {
-  background: rgba(255, 255, 255, 0.137);
+  background: #030303;
   color: #fff;
   width: 100%;
   margin: 3rem auto;
   padding: 2rem 1.5rem;
   border-radius: 20px;
+  border: 1px solid #fff;
 }
-
 
 .search {
   background: rgba(0, 0, 0, 0.5);
@@ -31,8 +31,8 @@ textarea {
 }
 
 .label {
-    font-size: 1.5rem;
-    font-weight: 300;
+  font-size: 1.5rem;
+  font-weight: 300;
 }
 
 .button {
